# ByteEngineD3D11

./: .gitignore  ByteEngineD3D11.slnx  CMakeLists.txt  CMakePresets.json  GlobalBuildConfigs.cmake  LICENSE.txt  README.md  THIRDPARTY.md  vcpkg.json
ByteEngineD3D11/: ByteEngineD3D11.vcxproj  ByteEngineD3D11.vcxproj.filters  CMakeLists.txt
ByteEngineD3D11/Code/Include/: Application.h  DebugLogHelper.h  EnumFlagsHelpers.h  GameTime.h  Primitives.h  RenderManager.h  Window.h  WindowEvents.h  WindowMode.h
ByteEngineD3D11/Code/Include/Base/: Singleton.h
ByteEngineD3D11/Code/Include/Collections/: StringView.h
ByteEngineD3D11/Code/Include/Core/Base/: Application.h  Singleton.h  Window.h  WindowEvents.h  WindowMode.h
ByteEngineD3D11/Code/Include/Core/Base/Window/: Window.h  WindowMode.h
ByteEngineD3D11/Code/Include/Core/Events/: Event.h  InputEvents.h  WindowEvents.h
ByteEngineD3D11/Code/Include/Core/Input/: Input.h  KeyCode.h
ByteEngineD3D11/Code/Include/Core/Renderer/: RenderContext.h
ByteEngineD3D11/Code/Include/Math/: Math.h  Quaternion.h  Vector2.h  Vector3.h
ByteEngineD3D11/Code/Include/TypesAliases/: ComTypesAlisases.h  PrimitiveTypesAliases.h  StdFunctionalTypesAliases.h  StdStringTypesAliases.h  StdVectorTypesAliases.h
ByteEngineD3D11/Code/Include/Utilities/: BitFlagsHelper.h  EnumFlagsOperators.h
ByteEngineD3D11/Code/Include/WinApiExcludingDefs/: NoGdi.h  NoLocalization.h
ByteEngineD3D11/Code/Shaders/: PixelShader.hlsl
ByteEngineD3D11/Code/Source/: Application.cpp  DebugLogHelper.cpp  Main.cpp  RenderManager.cpp  Window.cpp
ByteEngineD3D11/Code/Source/Core/Base/: Application.cpp  Window.cpp
ByteEngineD3D11/Code/Source/Core/Base/Window/: Window.cpp
ByteEngineD3D11/Code/Source/Core/Input/: Input.cpp
ByteEngineD3D11/Code/Source/Core/Math/: Math.cpp  Vector2.cpp
ByteEngineD3D11/Code/Source/Core/Renderer/: RenderContext.cpp
ByteEngineD3D11/Code/Source/Math/: Quaternion.cpp  Vector2.cpp  Vector3.cpp
ByteEngineD3D11/Code/Source/Shaders/: PlaneVertexShader.hlsl
ByteEngineD3D11/Platform/Windows/: ByteEngineD3D11.manifest
ByteEngineD3D11/Platform/Windows/Resources/: resource.h
ByteEngineD3D11/Resources/: ByteEngineD3D11.aps  ByteEngineD3D11.rc  RCb06052
CoreRuntime/: CMakeLists.txt
CoreRuntime/Code/Include/ByteEngine/: CoreDefs.h  DebugLogHelper.h  Primitives.h
CoreRuntime/Code/Include/ByteEngine/Core/Base/: Application.h  MainWindow.h  Singleton.h
CoreRuntime/Code/Include/ByteEngine/Core/EventSystem/: Delegate.h  MulticastDelegate.h
CoreRuntime/Code/Include/ByteEngine/Core/Input/: Input.h  KeyCode.h
CoreRuntime/Code/Include/ByteEngine/Core/Renderer/: RenderContext.h
CoreRuntime/Code/Include/ByteEngine/Detail/Core/EventSystem/: Subscriptions.h
CoreRuntime/Code/Include/ByteEngine/Math/: Color.h  Concepts.h  Math.h  Matrix4x4F.h  Quaternion.h  Rotation.h  Vector2.h  Vector2i.h  Vector3.h  Vector4.h  VectorConversions.h
CoreRuntime/Code/Include/ByteEngine/Utilities/: BitFlagsHelper.h  Utils.h
CoreRuntime/Code/Include/ByteEngine/WinApiExcludingDefs/: LeanAndMean.h  NoAll.h  NoIO.h  NoInput.h  NoSys.h  NoUiAndWindows.h
CoreRuntime/Code/Shaders/: CubeVertexShader.hlsl
CoreRuntime/Code/Source/: DebugLogHelper.cpp  Main.cpp
CoreRuntime/Code/Source/Core/Base/: Application.cpp
CoreRuntime/Code/Source/Core/Graphics/: GraphicsApi.h  GraphicsDevice.h
CoreRuntime/Code/Source/Core/Input/: Input.cpp
CoreRuntime/Code/Source/Core/Renderer/: RenderContext.cpp
CoreRuntime/Code/Source/Math/: Math.cpp  Matrix4x4F.cpp  Quaternion.cpp  Rotation.cpp  Vector2.cpp  Vector2i.cpp  Vector3.cpp
CoreRuntime/Code/Source/Platform/Core/Graphics/: GraphicsDeviceD3D11.cpp  GraphicsDeviceD3D11.h
Tests/: CMakeLists.txt
Tests/Math/: ColorTests.cpp  MathTests.cpp  Matrix4x4FTests.cpp  QuaternionTests.cpp  RotationTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp  Vector4Tests.cpp
WindowsLauncher/: CMakeLists.txt
WindowsLauncher/Code/Source/: Main.cpp  Win32Window.cpp  Win32Window.h
WindowsLauncher/Resources/: ByteEngineD3D11.rc  RCa24052  RCb24052  RCd24052  RCf24052  RCg24052  RCl24052  RCp24052  app.manifest
